--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
+    "joi": "^17.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
