--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "validator": "^13.7.0"
